--- a/docs/validators/manage/claim-rewards.mdx
+++ b/docs/validators/manage/claim-rewards.mdx
@@ -9,14 +9,14 @@ import confirmTransaction from './assets/confirm-transaction.png';
 
 ## Overview
 
-This page describes how to claim your staking reward
-and keep track of the commission and fast finality reward.
+This page describes how to claim your staking rewards
+and keep track of the commission and fast finality rewards.
 For information about rewards for validators, see
 [Rewards](./../../basics/rewards.md).
 
 ## Claim staking rewards
 
-Staking reward is calculated each period (approximately one day)
+Staking rewards are calculated each period (approximately one day)
 and displayed as “claimable rewards”. 
 You need to claim this reward manually.
 
@@ -30,7 +30,7 @@ You need to claim this reward manually.
 3. Confirm the transaction.
    <img src={confirmTransaction} width={400} />
 
-After the transaction is confirmed, the reward is credited to your wallet.
+After the transaction is confirmed, the rewards are credited to your wallet.
 
 ## Claim commission and fast finality rewards
 
@@ -39,4 +39,6 @@ because they are transferred to you automatically
 at the end of each period (approximately one day). 
 
 You can, however, keep track of these rewards in **Validator Dashboard >
-My Staking > Activities**.
+My Staking > Activities.**
+
+For more information, see [View activity](view-activity.mdx)
