--- a/docs/validators/manage/finality.mdx
+++ b/docs/validators/manage/finality.mdx
@@ -11,7 +11,7 @@ import editStepTwo from './assets/edit-finality-key-2.png';
 
 ## Overview
 
-This guide demonstrates how to add a *finality vote key* to your profile. The finality vote key is used to vote for blocks in the [fast finality mechanism](https://github.com/axieinfinity/REPs/blob/main/REP-0003.md#rewards). If you're an active Ronin validator, you need to have this key added in order to have the Fast Finality Reward transferred to your admin address by the end of the day.
+This guide demonstrates how to add a *finality vote key* to your profile. The finality vote key is used to vote for blocks in the [fast finality mechanism](https://github.com/axieinfinity/REPs/blob/main/REP-0003.md#rewards). If you're an active Ronin validator, you need to have this key added in order to have the fast finality rewards transferred to your admin address by the end of the day.
 
 ## Prerequisites
 
