--- a/docs/validators/manage/renounce.mdx
+++ b/docs/validators/manage/renounce.mdx
@@ -19,5 +19,5 @@ is permanent and cannot be undone.
 3. Click **Renounce** to submit the request.
 
 After submitting the request, wait seven days for the renunciation to take effect. To avoid slashing, keep your node online and up to date during this period.
-Your commission, bridge rewards, staking rewards, and the remaining
+Your commission, fast finality rewards, staking rewards, and the remaining
 self-stake will be transferred to you on the date of renunciation.
