--- a/docs/validators/manage/view-profile.mdx
+++ b/docs/validators/manage/view-profile.mdx
@@ -22,14 +22,13 @@ your profile contains the following addresses:
 staking activities, and to claim rewards. You can change this address. For more information, see [Change your admin address](addresses.mdx#admin).
 * **Validator address.** The address used for producing blocks. 
 This address is displayed to delegators and also called “consensus address”.
-* **Bridge operator address.** The address used for operating
-[Ronin Bridge](https://bridge.roninchain.com/).
+* **Bridge operator address.** The address used for operating a bridge node.
 * **Bridge governor address.** The address used to vote on changes to the bridge, such as pausing the bridge or adding bridge operators.
 * **Finality vote key.** This is the [cryptographic key](finality.mdx) used to vote
 for blocks in the fast finality mechanism. You can change this key. For more information, see [Change your finality vote key](finality.mdx#change).
 
 If you’re a Governing Validator, your profile has an additional **Governing validator address,** used to 
-[create proposals](./../governance/create-proposal.mdx) and
-[vote](./../governance/vote-on-proposal.mdx) on changes to the validator set.
+[create and vote on proposals](./../governance/overview.mdx) and
+for adding and removing other validators and updating smart contracts.
 
 <img src={governorProfile} width={400} />
