feat: clarify who can run a bridge (#286)
* feat: clarify who can run a bridge

* feat: remove bridge voter, remove incorrect info, edit .env for validators

--- a/docs/bridge-operators/index.mdx
+++ b/docs/bridge-operators/index.mdx
@@ -1,16 +1,16 @@
 ---
 title: Bridge operators
-description: Learn how to run a bridge operator, participate in governance, and more.
+description: Learn how to run a bridge node, participate in governance, and more.
 ---
 
 import DocCardList from '@theme/DocCardList'; 
 import {findSidebarItem} from '@site/src/sidebarUtils';
 
-## Run a bridge operator
+## Run a bridge node
 
 <DocCardList items={[
-    findSidebarItem('/bridge-operators/setup/run-bridge-operator'),
-    findSidebarItem('/bridge-operators/setup/upgrade-bridge-operator'),
+    findSidebarItem('/bridge-operators/setup/run-bridge'),
+    findSidebarItem('/bridge-operators/setup/upgrade-bridge'),
     ]} />
 
 ## Slashing for bridge operators
@@ -22,6 +22,6 @@ import {findSidebarItem} from '@site/src/sidebarUtils';
 ## Governance
 
 <DocCardList items={[
-    findSidebarItem('/bridge-operators/governance/create-proposal'),
-    findSidebarItem('/bridge-operators/governance/vote-on-proposal'),
+    findSidebarItem('/bridge-operators/governance/overview'),
+    findSidebarItem('/bridge-operators/governance/proposals'),
     ]} />
